[tool.poetry]
name = "bud"
version = "0.1.0"
description = ""
authors = ["Balint Mucsanyi <b.h.mucsanyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
torchmetrics = "^1.2.0"
tqdm = "^4.66.1"
tueplots = "^0.0.10"
wandb = "^0.15.12"
torchvision = "^0.16.0"
scipy = "^1.11.3"
wand = "^0.6.11"
scikit-image = "^0.22.0"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.1"
faiss-cpu = "^1.7.4"
huggingface-hub = "^0.18.0"
laplace-torch = "^0.1a2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ipython = "^8.16.1"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
